[gd_scene load_steps=2 format=3 uid="uid://cekta6v5aj2nc"]

[ext_resource type="Script" uid="uid://dv3k5wfjnjlkx" path="res://src/ui/pause_menu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1141.0
offset_top = -710.0
offset_right = -781.0
offset_bottom = -390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Paused"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="StatsTitle" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Run"
horizontal_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 4
columns = 2

[node name="WaveLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Wave"

[node name="WaveValue" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "--"
horizontal_alignment = 2

[node name="KillsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Kills"

[node name="KillsValue" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "--"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Time"

[node name="TimeValue" type="Label" parent="Panel/VBoxContainer/StatsContainer/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "--"
horizontal_alignment = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Quit to Menu"
